# Suchijido2Minecraft

./: .gitignore  .gitmodules  LICENSE  README.md  build.gradle  gradle.properties  ngi_structure.txt  settings.gradle
.github/workflows/: codeql-analysis.yml
src/main/java/com/mndk/kmdi/mod/: KmdiMod.java
src/main/java/com/mndk/kvm2m/db/: VMapSQLManager.java  VMapSQLReader.java
src/main/java/com/mndk/kvm2m/mod/: KVM2MConfig.java  KVectorMap2MinecraftMod.java
src/main/java/com/mndk/ngiparser/: NgiParser.java
src/main/java/com/mndk/ngiparser/nda/: NdaDataColumn.java
src/main/java/com/mndk/ngiparser/ngi/: NgiElementType.java  NgiHeader.java  NgiLayer.java  NgiParseException.java  NgiParseResult.java  NgiParserResult.java  NgiSyntaxErrorException.java
src/main/java/com/mndk/ngiparser/util/: DebuggableLineReader.java
src/main/java/com/mndk/scjd2mc/mod/: Scjd2McConfig.java  Suchijido2MinecraftMod.java
src/main/java/com/mndk/scjdmc/: Constants.java  ScjdConversionWorkingDirectory.java  Suchijido2Minecraft.java
src/main/java/com/mndk/scjdmc/cdtlib/: IndexedEdge.java  IndexedTriangle.java  IntersectingConstraintEdges.java  Triangulation.java  VertexInsertionOrder.java
src/main/java/com/mndk/scjdmc/column/: Column.java  (+4 more)
src/main/java/com/mndk/shapefile/: ShapefileParser.java  ShpDbfDataIterator.java  ShpDbfParser.java  ShpDbfRecord.java
src/main/natives/cdt_handler/: CMakeLists.txt  errors.h  javalist.h  main.cpp  main.h  triangulation.cpp  triangulation.h
src/main/resources/: log4j2.xml  mcmod.info
src/main/resources/assets/kmdi/lang/: en_us.lang
(+468 files in other folders)
